services/dns/unbound/k8s/unbound-service-lan.yaml
apiVersion: v1
kind: Service
metadata:
  name: unbound-lan
  namespace: dns
  labels:
    app.kubernetes.io/name: unbound
    app.kubernetes.io/part-of: homelab-dns
spec:
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/name: unbound
  ports:
    - name: dns-udp
      port: 53
      targetPort: dns-udp
      nodePort: 30053
      protocol: UDP
    - name: dns-tcp
      port: 53
      targetPort: dns-tcp
      nodePort: 30053
      protocol: TCP
  type: NodePort
